5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1684_1107.log
== TEST (2019-06-20 14:41:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0)
	x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
	print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- ERROR:
File "XXXX", line 7
    if(h==0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:42:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
	x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
	print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- ERROR:
File "XXXX", line 8
    x="domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:43:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
	print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 14:43:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
	print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- EXECUTION TIME:
0.681753
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:43:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
	print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:43:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
	print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:44:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
	print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:44:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
	print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:45:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- ERROR:
File "XXXX", line 127
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:45:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
		print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 14:45:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==1):
	x="segunda"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==2):
	x="terca"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==3):
	x="quarta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"

elif(h==4):
	x="quinta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
elif(h==5):
	x="sexta"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
	
elif(h==6):
	x="sabado"
	if((h+f)%7==0):
		y="domingo"
	elif((h+f)%7==1):
		y="segunda"
	elif((h+f)%7==2):
		y="terca"
	elif((h+f)%7==3):
		y="quarta"
	elif((h+f)%7==4):
		y="quinta"
	elif((h+f)%7==5):
		y="sexta"
	elif((h+f)%7==6):
		y="sabado"
		
		print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- EXECUTION TIME:
0.955491
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:49:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"
		
	elif(h==1):
		x="segunda"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"
		
	elif(h==2):
		x="terca"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"

	elif(h==3):
		x="quarta"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"

	elif(h==4):
		x="quinta"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"
			
	elif(h==5):
		x="sexta"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"
	
	elif(h==6):
		x="sabado"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"
			
	print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 14:50:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h=int(input("hoje:"))
if(h>=0 and h<=6):
	f=int(input("dia futuro:"))
	if(h==0):
		x="domingo"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"
		
	elif(h==1):
		x="segunda"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"
		
	elif(h==2):
		x="terca"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"

	elif(h==3):
		x="quarta"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"

	elif(h==4):
		x="quinta"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"
			
	elif(h==5):
		x="sexta"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"
	
	elif(h==6):
		x="sabado"
		if((h+f)%7==0):
			y="domingo"
		elif((h+f)%7==1):
			y="segunda"
		elif((h+f)%7==2):
			y="terca"
		elif((h+f)%7==3):
			y="quarta"
		elif((h+f)%7==4):
			y="quinta"
		elif((h+f)%7==5):
			y="sexta"
		elif((h+f)%7==6):
			y="sabado"
			
	print("Hoje eh",x," e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")
-- EXECUTION TIME:
0.658318
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado  e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
